# cellular-automata

./: .gitignore  Cargo.toml  README.md
data/shaders/: basic.vert  cellsim.comp  instanced.frag  instanced.vert
src/: arcball.rs  cell_sim.rs  gl_utils.rs  main.rs  pack.rs  ui_backend.rs  window.rs
