[package]
name = "cellular-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enterpolation = "0.2.1"
flexi_logger = "0.27.3"
imgui = "0.11.0"
log = "0.4.20"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
palette = "0.7.3"
rand = "0.8.5"
rayon = "1.8.0"
glfw = "0.54.0"
mmap-rs = "0.6.0"
rustring_builder = "0.2.0"
enum-iterator = "1.4.1"
thiserror = "1.0.50"
shaderc = "0.8.3"
